# KumaV

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
js_env/: bundle.js  fetch.js  http_request.js  index.js  package.json  storage.js  url.js
lib/: collection_page.dart  collections_page.dart  configs.dart  download_page.dart  favorites_page.dart  history_page.dart  item_page.dart  libraries_page.dart  main.dart  main_settings_page.dart  player_page.dart  search_page.dart
lib/extensions/: js_hidden_webview.dart  js_processor.dart  js_request.dart  js_storage.dart  js_utils.dart  script_context.dart
lib/layout/: all.xml_layout.dart
lib/localizations/: en.dart  localizations.dart  zh_hans.dart  zh_hant.dart
lib/pages/: collections.dart  downloads.dart  ext_page.dart  favorites.dart  fullscreen.dart  history.dart  index.dart  plugins.dart  settings.dart  video.dart
lib/utils/: assets_filesystem.dart  cancelable.dart  comments.dart  configs.dart  controller.dart  credits_dialog.dart  download_manager.dart  downloads.dart  event_listener.dart  favorites.dart  favorites_manager.dart  get_ready.dart  github_account.dart  histories.dart  image_providers.dart  io_filesystem.dart  main_item_controller.dart  manager.dart  message_exception.dart  plugin.dart  plugins.dart  progress_items.dart  proxy_collections.dart  search_page_route.dart  video_item.dart  video_load_item.dart  video_notification.dart
lib/widgets/: better_refresh_indicator.dart  bordered_menu_button.dart  credits_dialog.dart  danmaku_layer.dart  danmaku_widget.dart  full_kuma_player.dart  fullscreen_player.dart  hint_point.dart  item_list.dart  item_widget.dart  no_data.dart  overlay_alert.dart  overlay_menu.dart  player_controller.dart  player_slider.dart  player_wrap.dart  progress_dialog.dart  progress_items.dart  send_widget.dart  settings_list.dart  tracker.dart  (+12 more)
localizations/: en.yaml  zh_hans.yaml  zh_hant.yaml
plugins/glib/: CMakeLists.txt  pubspec.yaml
plugins/glib/android/: build.gradle
plugins/glib/example/android/: local.properties
plugins/glib/lib/: glib.dart
plugins/glib/lib/core/: binds.dart  core.dart  data.dart  gmap.dart
plugins/glib/lib/main/: context.dart  data_item.dart
plugins/glib/lib/utils/: browser.dart  git_repository.dart  platform.dart  request.dart  secp256k1.dart
plugins/glib/src/application/: dart_main_android.cpp  glib.cpp
plugins/glib/src/application/main/: Context.cpp  Project.cpp
plugins/glib/src/application/utils/: GitRepository.cpp  GitRepository.h  Platform.h  Request.h  Secp256k1.cpp  Secp256k1.h
plugins/glib/src/application/utils/dart/: DartRequest.cpp
plugins/glib/src/gcore/: CMakeLists.txt
plugins/glib/src/gcore/core/: IMP.cpp
plugins/glib/src/gcore/script/quickjs/: QuickJSScript.cpp
test/: widget_test.dart
(+116 files in other folders)
